--- a/style.css
+++ b/style.css
@@ -61,10 +61,15 @@ h5.ribbon {
     font-weight: 500;
     font-size: 20px !important;
     position: center;
+    text-align: center;
+    flex: auto;
     /*background: rgba(6, 43, 33, 0.6);*/
     color: #03A9F4;
-    text-align: center;
-    /*padding: 1em 2em;*/
+    padding: 1em 2em;
+    alignment: center;
+    align-items: center;
+    align-content: center;
+    align-self: center;
 }
 
 .image {
@@ -146,6 +151,7 @@ body {
 .a:active {
     font-size: 20px;
     color: #03A9F4;
+    position: center;
     text-align: center;
     font-family: 'Rubik', sans-serif;
     font-weight: 500;
