--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://getbootstrap.com/dist/css/bootstrap.css');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap');
 @import url('https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css');
+@import "headings.css";
 
 .team-members {
     display: block;
@@ -34,43 +35,6 @@
     font-weight: 500;
 }
 
-h1 {
-    font-size: 60px !important;
-    font-family: 'Rubik', sans-serif;
-    font-weight: 900;
-    position: center;
-    /*background: rgba(6, 43, 33, 0.6);*/
-    color: #03A9F4;
-    text-align: center;
-    /*padding: 1em 2em;*/
-}
-
-h2.ribbon {
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
-    font-size: 38px !important;
-    position: center;
-    /*background: rgba(6, 43, 33, 0.6);*/
-    color: #03A9F4;
-    text-align: center;
-    /*padding: 1em 2em;*/
-}
-
-h5.ribbon {
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
-    font-size: 20px !important;
-    position: center;
-    text-align: center;
-    flex: auto;
-    /*background: rgba(6, 43, 33, 0.6);*/
-    color: #03A9F4;
-    padding: 1em 2em;
-    alignment: center;
-    align-items: center;
-    align-content: center;
-    align-self: center;
-}
 
 .image {
     horiz-align: center;
@@ -84,10 +48,13 @@ h5.ribbon {
 
 .team_photo {
     /*@import "image";*/
-    horiz-align: left;
+    horiz-align: center;
     height: 600px;
     padding: 10px;
-    float: left;
+    position: center;
+    align-self: center;
+    align-content: center;
+    alignment: center;
 }
 
 .image_small {
