new photos and hacks

--- a/hackathons.css
+++ b/hackathons.css
@@ -7,7 +7,8 @@
 @use "@material/button";
 @include button.core-styles;
 
-div {
+
+.div-center {
     align-items: flex-start;
     align-self: flex-start;
     flex-direction: row;
