--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @import url('https://getbootstrap.com/dist/css/bootstrap.css');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@600&display=swap');
 @import url('https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css');
+@import url('https://unpkg.com/material-components-web@latest/dist/material-components-web.css');
+
 @import "headings.css";
 
 @use "@material/card";
@@ -13,7 +15,7 @@
     margin: 10px;
 }
 
-.my-mdc-button__label{
+.my-mdc-button__label {
     color: #03A9F4;
 }
 
