--- a/style.css
+++ b/style.css
@@ -19,6 +19,15 @@
     color: #03A9F4;
 }
 
+.button_apk {
+    margin: 20px;
+    width: 200px;
+    height: 44px;
+    font-size: 20px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 500;
+}
+
 .team-members {
     display: block;
     margin: 0 auto;
