--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,15 @@
 
 /* ==========================================================================
-   Base styles: opinionated defaults
+   Imports
+   ========================================================================== */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
+
+/* ==========================================================================
+   Base styles
    ========================================================================== */
 
 html {
-  color: #222;
+  color: #242424;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -20,12 +25,12 @@ html {
  */
 
 ::-moz-selection {
-  background: #b3d4fc;
+  background: #86C5FF;
   text-shadow: none;
 }
 
 ::selection {
-  background: #b3d4fc;
+  background: #86C5FF;
   text-shadow: none;
 }
 
@@ -37,7 +42,7 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid #ccc;
+  border-top: 1px solid #242424;
   margin: 1em 0;
   padding: 0;
 }
@@ -76,8 +81,177 @@ textarea {
 }
 
 /* ==========================================================================
-   Author's custom styles
+   Main custom styles
    ========================================================================== */
+
+html {
+  font-family: 'Rubik', sans-serif;
+  font-size: 62.5%;
+  color: #242424;
+  scroll-behavior: smooth;
+}
+
+body {
+  font-size: 1.6rem;
+}
+
+.button {
+  padding: 1em 7em;
+  box-sizing: border-box;
+  border-radius: 16px;
+  border: none;
+  
+  font-weight: bold;
+  font-size: 2rem;
+  text-decoration: none;
+  
+  color: #fff;
+  background-color: #2998FF;
+
+  cursor: pointer;
+}
+
+.header {
+  height: 9rem;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: #fff;
+  box-shadow: 0 4px 11px rgba(0, 0, 0, 0.05);
+}
+
+.header__content {
+  height: 100%;
+  max-width: 1120px;
+  margin: 0 auto;
+  position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__logo-link {
+  position: absolute;
+  top: 50%;
+  left: 8px;
+  transform: translateY(-50%);
+}
+
+.header__logo-link {
+  text-decoration: none;
+}
+
+.header__list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 64px;
+  width: 100%;
+  max-width: 800px;
+}
+
+.header__list-item + .header__list-item {
+  margin-left: 1.5em;
+}
+
+.header__link {
+  font-weight: bold;
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: inherit;
+  position: relative;
+}
+
+.header__link::after {
+  content: "";
+  width: 0%;
+  height: .2em;
+
+  position: absolute;
+  bottom: -.3em;
+  left: 50%;
+
+  background-color: #242424;
+  border-radius: 1.5px;
+  opacity: 0;
+  transition: .1s .1s;
+}
+
+.header__link:focus::after,
+.header__link:hover::after,
+.header__link.header__link_pre-active::after {
+  width: 40%;
+
+  left: 30%;
+  opacity: 1;
+  
+  transition-delay: 0s;
+}
+
+.header__link.header__link_active::after {
+  width: 90%;
+  left: 5%;
+  opacity: 1;
+  transition-delay: 0s;
+  background-color: #2998FF;
+}
+
+
+
+.hero {
+  padding-top: 9rem;
+  box-sizing: border-box;
+  height: 100vh;
+  display: flex;
+}
+
+.hero__image {
+  width: 50vw;
+
+  border-radius: 0 0 32px 0;
+  background-image: url("/img/hero.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #2998FF;
+}
+
+.hero__content {
+  flex: 1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero__content-wrapper{
+  max-width: 40rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero__logo {
+  user-select: none;
+  width: 70%;
+  height: auto;
+}
+
+.hero__paragraph {
+  font-size: 2.4rem;
+  margin-top: 3rem;
+}
+
+.hero__button {
+  margin-top: 3rem;
+  width: 100%;
+}
 
 /* ==========================================================================
    Helper classes
@@ -159,23 +333,6 @@ textarea {
 
 .clearfix::after {
   clear: both;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
 }
 
 /* ==========================================================================
