--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,9 @@ body {
 }
 
 .button {
+  position: relative;
+  bottom: 0;
+  
   padding: 1em 7em;
   box-sizing: border-box;
   border-radius: 16px;
@@ -107,9 +110,28 @@ body {
   
   color: #fff;
   background-color: #2998FF;
+  box-shadow: 0 0 0 #000;
 
   cursor: pointer;
+  transition: .1s ease-out;
 }
+
+.button:focus,
+.button:hover {
+  outline: none;
+  bottom: .3em;
+  box-shadow: 0em 0.3em #242424;
+  background-color: #2DA7FF;
+}
+
+.button:active {
+  bottom: 0;
+  box-shadow: 0 0 rgba(0, 0, 0, 1);
+  background-color: #2998FF;
+  transition: .05s;
+}
+
+
 
 .header {
   height: 9rem;
@@ -140,6 +162,21 @@ body {
   transform: translateY(-50%);
 }
 
+.header__logo-link:focus {
+  outline: none;
+}
+
+.header__logo {
+  filter: brightness(1);
+  transition: .25s .1s;
+}
+
+.header__logo-link:focus .header__logo,
+.header__logo-link:hover .header__logo {
+  filter: brightness(0);
+  transition-delay: 0s;
+}
+
 .header__logo-link {
   text-decoration: none;
 }
@@ -165,6 +202,10 @@ body {
   text-decoration: none;
   color: inherit;
   position: relative;
+}
+
+.header__link:focus {
+  outline: none;
 }
 
 .header__link::after {
