--- a/css/main.css
+++ b/css/main.css
@@ -279,9 +279,24 @@ body {
 }
 
 .hero__logo {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero__logo-image {
   user-select: none;
-  width: 70%;
+  width: 50%;
   height: auto;
+}
+
+.hero__logo-header {
+  font-size: 4.6rem;
+  line-height: 1;
+  text-transform: uppercase;
+  margin: .4em 0 0 0;
 }
 
 .hero__paragraph {
