Added what-we-do section

--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,8 @@ body {
 
 .max-width-1120 {
   max-width: 1120px;
+  padding: 0 8px;
+  box-sizing: border-box;
 }
 
 
@@ -290,6 +292,7 @@ body {
   padding-top: 9rem;
   box-sizing: border-box;
   height: 100vh;
+  min-height: 800px;
   display: flex;
 }
 
@@ -297,11 +300,8 @@ body {
   width: 50vw;
 
   border-radius: 0 0 32px 0;
-  background-image: url("../img/hero.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
   background-color: #2998FF;
+  object-fit: cover;
 }
 
 .hero__content {
@@ -356,11 +356,115 @@ body {
       what-we-do
 -------------------- */
 .what-we-do {
-  margin: 0 auto;
+  margin: 12.8rem auto 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .what-we-do__header {
+  margin: 0 0 1.3em;
+  font-size: 4.8rem;
+  text-transform: uppercase;
+}
+
+.what-we-do__text {
+  min-width: 53.6rem;
+  max-width: 55.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.what-we-do__desc-list {
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 2.4rem;
+}
+
+.what-we-do__desc-item {
+  max-width: 25.5rem;
+}
+
+.what-we-do__desc-term {
+  font-weight: bold;
+  font-size: 1.6rem;
+  padding-left: 4.8rem;
+  position: relative;
+}
+
+.what-we-do__desc-def {
+  margin: 1.6rem 0 0;
+  font-size: 1.6rem;
+  line-height: 1.3125;
+  letter-spacing: 0.3px;
+}
+
+.what-we-do__desc-term::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 32px;
+  height: 32px;
+  background-image: url('../img/what-we-do__desc-term.svg');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+}
+
+.what-we-do__image {
+  min-width: 0px;
+  min-height: 64.3rem;
+  object-fit: cover;
+  margin-left: 20px;
+  border-radius: 16px;
+}
+
+
+.projects {
+  margin-top: 12.8rem;
+}
+
+
+/* --------------------
+        others
+-------------------- */
+.projects,
+.achivments,
+.contacts {
+  height: 150vh;
+  position: relative;
+}
+
+.projects::after,
+.achivments::after,
+.contacts::after {
+  content: attr(id);
+  text-transform: uppercase;
+  font-size: 10rem;
+  font-weight: bold;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.projects {
+  background-color:#86C5FF;
+}
+
+.achivments {
+  background-color: #2998FF;
+}
+
+.contacts {
+  background-color: #00509A;
 }
 
 /* ==========================================================================
