--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,7 @@ body {
   font-weight: bold;
   font-size: 2rem;
   text-decoration: none;
+  text-align: center;
 
   cursor: pointer;
 }
@@ -143,11 +144,12 @@ body {
 
 .button__body {
   display: block;
+  width: 100%;
   position: relative;
   bottom: 0;
   left: 0;
 
-  padding: 1em 7em;
+  padding: 1em 0;
   box-sizing: border-box;
   border-radius: 16px;
 
@@ -284,6 +286,16 @@ body {
   background-color: #2998FF;
 }
 
+@media screen and (max-width: 850px) {
+  .header__list {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  
+}
+
 
 /* --------------------
          hero
@@ -294,6 +306,7 @@ body {
   height: 100vh;
   min-height: 600px;
   display: flex;
+  justify-content: center;
 }
 
 .hero__image {
@@ -306,6 +319,7 @@ body {
 
 .hero__content {
   flex: 1;
+  margin: 0 8px;
 
   display: flex;
   justify-content: center;
@@ -349,6 +363,23 @@ body {
 .hero__button {
   margin-top: 3rem;
   width: 100%;
+}
+
+@media screen and (max-width: 850px) {
+  .hero__image {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .hero__button {
+
+  }
+
+  .hero__content-wrapper {
+    max-width: none;
+    width: 90%;
+  }
 }
 
 
