--- a/css/main.css
+++ b/css/main.css
@@ -241,18 +241,19 @@ body {
 }
 
 .header__list-item {
-  display: flex;
-  align-items: center;
   height: 100%;
-  position: relative;
 }
 
 .header__link {
+  height: 100%;
+  display: flex;
+  align-items: center;
   font-weight: bold;
   font-size: 2.4rem;
   text-transform: uppercase;
   text-decoration: none;
   color: inherit;
+  position: relative;
 }
 
 .header__link:focus {
@@ -500,14 +501,14 @@ body {
         others
 -------------------- */
 .projects,
-.achivments,
+.achievements,
 .contacts {
   height: 150vh;
   position: relative;
 }
 
 .projects::after,
-.achivments::after,
+.achievements::after,
 .contacts::after {
   content: attr(id);
   text-transform: uppercase;
@@ -523,7 +524,7 @@ body {
   background-color:#86C5FF;
 }
 
-.achivments {
+.achievements {
   background-color: #2998FF;
 }
 
