--- a/css/main.css
+++ b/css/main.css
@@ -472,9 +472,10 @@ body {
   margin: 1em 0 3em;
 }
 
-/* .project-card__button {
-  
-} */
+.project-card__button {
+  font-size: 2.2rem;
+  padding: 0.9em 0;
+}
 
 .projects__more {
   text-align: center;
