--- a/css/main.css
+++ b/css/main.css
@@ -202,7 +202,7 @@ body {
   height: 100%;
   display: flex;
   align-items: center;
-  font-weight: bold;
+  font-weight: 400;
   font-size: 2.4rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -216,36 +216,40 @@ body {
 
 .header__link::after {
   content: "";
-  width: 0%;
-  height: 5px;
+  width: 40%;
+  height: 0px;
 
   position: absolute;
   bottom: 0;
-  left: 50%;
+  left: 30%;
 
   background-color: #242424;
   border-radius: 1.5px;
-  opacity: 0;
-  transition: .1s .1s;
+  transition: all .1s .2s,
+              height .1s ease-out .1s,
+              background-color .1s .2s;
 }
 
 .header__link:focus::after,
 .header__link:hover::after,
 .header__link.header__link_pre-active::after {
-  width: 40%;
-
-  left: 30%;
-  opacity: 1;
+  height: 3px;
   
-  transition-delay: 0s;
+  transition-delay: .1s, 0s, .1s;
+}
+
+.header__link.header__link_not-active::after {
+  width: 40% !important;
+  height: 0 !important;
+  left: 30% !important;
 }
 
 .header__link.header__link_active::after {
   width: 90%;
+  height: 5px;
   left: 5%;
-  opacity: 1;
-  transition-delay: 0s;
   background-color: #2998FF;
+  transition-delay: 0s, .2s, 0s;
 }
 
 @media screen and (max-width: 850px) {
