Slider small improvements

--- a/css/main.css
+++ b/css/main.css
@@ -527,6 +527,13 @@ body {
   color: #fff;
 }
 
+.achievements__slider-wrapper {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 32px;
+  box-sizing: border-box;
+}
+
 .achievements__slider-inner {
   padding: 20px 0;
   margin: 0;
