--- a/css/main.css
+++ b/css/main.css
@@ -385,11 +385,18 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 2.4rem;
 }
 
 .what-we-do__desc-item {
   max-width: 25.5rem;
+}
+
+.what-we-do__desc-item:nth-of-type(2n + 1) {
+  margin-right: 2.4rem;
+}
+
+.what-we-do__desc-item:not(:nth-last-of-type(-n + 2)) {
+  margin-bottom: 2.4rem;
 }
 
 .what-we-do__desc-term {
