--- a/css/main.css
+++ b/css/main.css
@@ -520,6 +520,7 @@ body {
 -------------------- */
 .achievements {
   width: 100%;
+  margin: 0 0 9.2rem;
   padding: 2.5rem 0 1.6rem;
   background-color: #2998FF;
 }
@@ -608,7 +609,12 @@ body {
   margin: 0;
   background: none;
   border: none;
+  border-radius: 8px;
   cursor: pointer;
+}
+
+.achievements__slider-control:focus {
+  outline-color: #fff;
 }
 
 .achievements__slider-control svg {
@@ -653,26 +659,82 @@ body {
 
 
 /* --------------------
-        others
+        contacts
 -------------------- */
 .contacts {
   height: 150vh;
-  position: relative;
+  max-width: 552px;
+  margin: 0 auto;
+  padding: 0 32px;
+  box-sizing: border-box;
 }
 
-.contacts::after {
-  content: attr(id);
+.contacts__title {
+  margin: 0 0 6.4rem;
+  font-size: 4.8rem;
+  line-height: 1;
   text-transform: uppercase;
-  font-size: 10rem;
-  font-weight: bold;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #242424;
 }
 
-.contacts {
-  background-color: #00509A;
+.contacts__form {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.contacts__form-item {
+  flex: 0 0 100%;
+  box-sizing: border-box;
+  border-radius: 8px;
+}
+
+.contacts__form-item::placeholder {
+  color: #BEBEBE;
+}
+
+input.contacts__form-item,
+textarea.contacts__form-item {
+  margin: 0 0 1em;
+  padding: .7em;
+
+  font-size: 1.4rem;
+  line-height: 1;
+  background-color: #F2F2F2;
+  color: #242424;
+  box-shadow: inset 0 0 0 0 #2998FF;
+  border: none;
+  transition: box-shadow .25s .1s;
+}
+
+input.contacts__form-item:focus,
+textarea.contacts__form-item:focus {
+  outline: none;
+  transition-delay: 0s;
+  box-shadow: inset 0 0 0 0.1em #2998FF;
+}
+
+textarea.contacts__form-item {
+  padding: 1em;
+  min-height: 10em;
+  max-height: 20em;
+}
+
+[name="email"].contacts__form-item,
+[name="tel"].contacts__form-item {
+  flex-basis: 49%;
+}
+
+button.contacts__form-item {
+  border-radius: 8px;
+  font-size: 1.6rem;
+}
+
+input.contacts__form-item_css-validate:invalid,
+textarea.contacts__form-item_css-validate:invalid {
+  box-shadow: inset 0 0 0 0.1em #ff295f;
 }
 
 /* --------------------
