--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,7 @@ body {
 
   font-weight: bold;
   font-size: 2rem;
+  line-height: 1;
   text-decoration: none;
   text-align: center;
   
@@ -679,6 +680,7 @@ body {
 }
 
 .contacts__form {
+  position: relative;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -691,14 +693,88 @@ body {
   border-radius: 8px;
 }
 
+.contacts__form-item-after {
+  position: absolute;
+  height: 1rem;
+  width: 1rem;
+  cursor: text;
+}
+
+.form__name-after {
+  right: 1rem;
+  top: 1.1rem;
+}
+
+.form__email-after {
+  right: 51%;
+  top: 5.7rem;
+  transform: translateX(-1rem);
+}
+
+.form__tel-after {
+  right: 1rem;
+  top: 5.7rem;
+}
+
+.form__message-after {
+  right: 1.4rem;
+  bottom: 7.6rem;
+}
+
+.contacts__form-item-after use {
+  fill: transparent;
+  transition: fill .25s;
+}
+
+/* asterisk */
+input.contacts__form-item:required + .contacts__form-item-after use:nth-of-type(1),
+textarea.contacts__form-item:required + .contacts__form-item-after use:nth-of-type(1)  {
+  fill: #BEBEBE;
+}
+
+input.contacts__form-item:required:focus:not(.contacts__form-item_css-validate) + .contacts__form-item-after use:nth-of-type(1),
+textarea.contacts__form-item:required:focus:not(.contacts__form-item_css-validate) + .contacts__form-item-after use:nth-of-type(1) {
+  fill: #2998FF;
+}
+
+input.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(1),
+textarea.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(1) {
+  fill: transparent;
+}
+
+input.contacts__form-item_css-validate:valid + .contacts__form-item-after use:nth-of-type(1),
+textarea.contacts__form-item_css-validate:valid + .contacts__form-item-after use:nth-of-type(1) {
+  fill: transparent;
+}
+
+input.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(2),
+textarea.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(2) {
+  fill:transparent;
+}
+
+input.contacts__form-item_css-validate:valid + .contacts__form-item-after use:nth-of-type(2),
+textarea.contacts__form-item_css-validate:valid + .contacts__form-item-after use:nth-of-type(2) {
+  fill:#7bbe85;
+}
+
+input.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(3),
+textarea.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(3) {
+  fill:#FF3366;
+}
+
+input.contacts__form-item_css-validate:valid + .contacts__form-item-after use:nth-of-type(3),
+textarea.contacts__form-item_css-validate:valid + .contacts__form-item-after use:nth-of-type(3) {
+  fill:transparent;
+}
+
 .contacts__form-item::placeholder {
   color: #BEBEBE;
 }
 
 input.contacts__form-item,
 textarea.contacts__form-item {
-  margin: 0 0 1em;
-  padding: .7em;
+  margin: 0 0 1.4rem;
+  padding: 1rem 2.6rem 1rem 1rem;
 
   font-size: 1.4rem;
   line-height: 1;
@@ -707,6 +783,10 @@ textarea.contacts__form-item {
   box-shadow: inset 0 0 0 0 #2998FF;
   border: none;
   transition: box-shadow .25s .1s;
+}
+
+input.contacts__form-item {
+  max-height: 3.2rem;
 }
 
 input.contacts__form-item:focus,
@@ -718,6 +798,7 @@ textarea.contacts__form-item:focus {
 
 textarea.contacts__form-item {
   padding: 1em;
+  line-height: 1;
   min-height: 10em;
   max-height: 20em;
 }
@@ -730,11 +811,17 @@ textarea.contacts__form-item {
 button.contacts__form-item {
   border-radius: 8px;
   font-size: 1.6rem;
+  max-height: 4.8rem;
 }
 
 input.contacts__form-item_css-validate:invalid,
 textarea.contacts__form-item_css-validate:invalid {
-  box-shadow: inset 0 0 0 0.1em #ff295f;
+  box-shadow: inset 0 0 0 0.1em #FF3366;
+}
+
+input.contacts__form-item_css-validate:valid,
+textarea.contacts__form-item_css-validate:valid {
+  box-shadow: inset 0 0 0 0.1em #7bbe85;
 }
 
 /* --------------------
