--- a/css/main.css
+++ b/css/main.css
@@ -663,10 +663,10 @@ body {
         contacts
 -------------------- */
 .contacts {
-  height: 150vh;
   max-width: 552px;
   margin: 0 auto;
   padding: 0 32px;
+  margin-bottom: 9.5rem;
   box-sizing: border-box;
 }
 
@@ -677,6 +677,28 @@ body {
   text-transform: uppercase;
   text-align: center;
   color: #242424;
+}
+
+.contacts__links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.contacts__link {
+  flex: 0 0 49%;
+  box-sizing: border-box;
+  max-height: 5.4rem;
+  margin: 0 0 1.4rem;
+  padding: 1.9rem 0 1.9rem 4.8rem;
+
+  font-size: 1.2rem;
+  line-height: 1;
+  text-decoration: none;
+  text-align: center;
+  color: #242424;
+  background-color: #F2F2F2;
+  border-radius: 8px;
 }
 
 .contacts__form {
@@ -747,6 +769,7 @@ textarea.contacts__form-item_css-validate:valid + .contacts__form-item-after use
   fill: transparent;
 }
 
+/* check */
 input.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(2),
 textarea.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(2) {
   fill:transparent;
@@ -757,6 +780,7 @@ textarea.contacts__form-item_css-validate:valid + .contacts__form-item-after use
   fill:#7bbe85;
 }
 
+/* cross */
 input.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(3),
 textarea.contacts__form-item_css-validate:invalid + .contacts__form-item-after use:nth-of-type(3) {
   fill:#FF3366;
@@ -808,12 +832,6 @@ textarea.contacts__form-item {
   flex-basis: 49%;
 }
 
-button.contacts__form-item {
-  border-radius: 8px;
-  font-size: 1.6rem;
-  max-height: 4.8rem;
-}
-
 input.contacts__form-item_css-validate:invalid,
 textarea.contacts__form-item_css-validate:invalid {
   box-shadow: inset 0 0 0 0.1em #FF3366;
@@ -822,6 +840,97 @@ textarea.contacts__form-item_css-validate:invalid {
 input.contacts__form-item_css-validate:valid,
 textarea.contacts__form-item_css-validate:valid {
   box-shadow: inset 0 0 0 0.1em #7bbe85;
+}
+
+.form__submit {
+  position: relative;
+  border: none;
+  border-radius: 8px;
+  background-color: #2998FF;
+  padding: 1em 0;
+  margin: 0 auto;
+
+  font-weight: bold;
+  font-size: 1.6rem;
+  line-height: 1;
+  color: #fff;
+
+  cursor: pointer;
+  outline: none;
+
+  height: 4.8rem;
+  overflow: hidden;
+  
+  transition-property: flex-basis, border-radius, background-color;
+  transition-duration: .5s,         .5s,            0.25s;
+  transition-delay:     0s,         0s,            0.1s;
+  transition-timing-function: ease, ease, ease-out;
+}
+
+.form__submit:not(.form__submit_sent,.form__submit.form__submit_sending):focus,
+.form__submit:not(.form__submit_sent,.form__submit.form__submit_sending):hover {
+  background-color: #00509A;
+  transition-delay:    0s,          0s,            0s;
+}
+
+.form__submit.form__submit_sending {
+  flex-basis: 4.8rem;
+  border-radius: 50px;
+  background-color: #2998FF;
+  transition-delay:    0s,         .25s,            0s;
+}
+
+.form__submit.form__submit_sent {
+  background-color: #7bbe85;
+}
+
+.form__submit.form__submit_fail {
+  background-color: #FF3366;
+}
+
+.form__submit-text {
+  display: block;
+  opacity: 1;
+  transition: opacity .5s .5s;
+}
+
+.form__submit-logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  transform: translate(-49%, -50%);
+
+  opacity: 0;
+  transition: opacity .5s 0s;
+  animation: form__submit-logo_rotate 1.2s infinite cubic-bezier(0.68, -0.6, 0.32, 1.6);
+}
+
+.form__submit-sent-text,
+.form__submit-fail-text {
+  display: block;
+  opacity: 0;
+  transition: opacity .5s;
+}
+
+.form__submit_hidden {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 0px;
+  width: 0px;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+@keyframes form__submit-logo_rotate {
+  from {
+    transform: translate(-49%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-49%, -50%) rotate(360deg);
+  }
 }
 
 /* --------------------
