--- a/css/main.css
+++ b/css/main.css
@@ -256,16 +256,81 @@ body {
   background-color: #2998FF;
   transition-delay: 0s, 0s, .2s, 0s;
   transition-timing-function: ease-in, ease-in, ease-in, ease-in;
-
 }
 
-@media screen and (max-width: 850px) {
+.header__ham {
+  position: absolute;
+  top: 50%;
+  right: 32px;
+  transform: translateY(-50%);
+
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  box-sizing: content-box;
+  height: 26px;
+  width: 42px;
+  margin: 0;
+  padding: 19px 11px;
+
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.header__ham-line {
+  position: relative;
+  width: 100%;
+  height: 20%;
+  background-color: #242424;
+  transition-property: transform, width, top, bottom;
+  transition-duration: .25s, 0s, .25s, .25s;
+  transition-delay: 0s, .25s, .25s, .25s;
+  transition-timing-function: ease-out;
+}
+
+.header__ham-line:nth-child(1) {
+  top: 0;
+}
+
+.header__ham-line:nth-child(3) {
+  bottom: 0;
+}
+
+.header__ham-close .header__ham-line {
+  transition-property: transform, width, top, bottom;
+  transition-duration: .25s, 0s, .25s, .25s;
+  transition-delay: .25s, .25s, 0s, 0s;
+  transition-timing-function: ease-out;
+}
+
+.header__ham-close .header__ham-line:nth-child(1)  {
+  top: 40%;
+  transform: rotate(45deg);
+}
+
+.header__ham-close .header__ham-line:nth-child(2)  {
+  width: 0;
+}
+
+.header__ham-close .header__ham-line:nth-child(3)  {
+  bottom: 40%;
+  transform: rotate(-45deg);
+}
+
+@media screen and (max-width: 992px) {
   .header__list {
     display: none;
   }
+
+  .header__ham {
+    display: flex;
+  }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 576px) {
   
 }
 
@@ -316,7 +381,7 @@ body {
 
 .hero__logo-image {
   fill: #2998FF;
-  width: 50%;
+  width: 20rem;
 }
 
 .hero__logo-header {
@@ -330,21 +395,21 @@ body {
 
 .hero__paragraph {
   font-size: 2.4rem;
-  margin-top: 3rem;
+  margin: 3rem 0 0;
 }
 
 .hero__button {
-  margin-top: 3rem;
+  margin: 4.8rem 0 0;
   width: 100%;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 992px) {
   .hero__image {
     display: none;
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 576px) {
   /* .hero__button {
 
   } */
@@ -352,6 +417,10 @@ body {
   .hero__content-wrapper {
     max-width: none;
     width: 90%;
+  }
+
+  .hero__button {
+    margin: 2rem 0 0;
   }
 }
 
@@ -366,12 +435,6 @@ body {
   align-items: flex-start;
 }
 
-.what-we-do__header {
-  margin: 0 0 1.3em;
-  font-size: 4.8rem;
-  text-transform: uppercase;
-}
-
 .what-we-do__text {
   min-width: 53.6rem;
   max-width: 55.2rem;
@@ -379,6 +442,12 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
+}
+
+.what-we-do__header {
+  margin: 0 0 1.3em;
+  font-size: 4.8rem;
+  text-transform: uppercase;
 }
 
 .what-we-do__desc-list {
@@ -389,15 +458,15 @@ body {
 }
 
 .what-we-do__desc-item {
-  max-width: 25.5rem;
+  width: 48%;
 }
 
 .what-we-do__desc-item:nth-of-type(2n + 1) {
-  margin-right: 2.4rem;
+  margin-right: 4%;
 }
 
 .what-we-do__desc-item:not(:nth-last-of-type(-n + 2)) {
-  margin-bottom: 2.4rem;
+  margin-bottom: 4%;
 }
 
 .what-we-do__desc-term {
@@ -428,6 +497,55 @@ body {
   object-fit: cover;
   margin-left: 20px;
   border-radius: 16px;
+}
+
+@media screen and (max-width: 768px) {
+  .what-we-do__header {
+    font-size: 4.2rem;
+  }
+
+  .what-we-do__text {
+    max-width: 57rem;
+  }
+
+  .what-we-do__image {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .what-we-do {
+    position: relative;
+  }
+  
+  .what-we-do__text {
+    min-width: auto;
+  }
+  
+  .what-we-do__header {
+    font-size: 3rem;
+    order: -2;
+    margin-bottom: 1.6rem;
+  }
+
+  .what-we-do__desc-item {
+    width: 100%;
+    margin-right: 0 !important;
+  }
+
+  .what-we-do__desc-item:not(:last-of-type) {
+    margin-bottom: 1.6rem;
+  }
+
+  .what-we-do__image {
+    display: block;
+    max-height: 26rem;
+    min-height: auto;
+    width: 100%;
+    margin: 0 0 1.6rem;
+
+    order: -1;
+  }
 }
 
 
@@ -483,6 +601,7 @@ body {
   line-height: 1;
   font-weight: bold;
   min-height: 2em;
+  word-wrap: break-word;
 }
 
 .project-card__description {
@@ -513,6 +632,90 @@ body {
 .projects__more-link:hover {
   color: #242424;
   transition-delay: 0s;
+}
+
+
+@media screen and (max-width: 992px) {
+  .projects__header {
+    font-size: 4.2rem;
+    margin-bottom: 5.4rem;
+  }
+
+  .project-card__title {
+    font-size: 2.6rem;
+  }
+
+  .project-card__description {
+    font-size: 1.5rem;
+  }
+
+  .project-card__button {
+    font-size: 2rem;
+  }
+
+  .projects__more-link {
+    font-size: 2.2rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .projects__header {
+    font-size: 4.2rem;
+    margin-bottom: 4.8rem;
+  }
+
+  .project-card__title {
+    font-size: 2rem;
+  }
+
+  .project-card__description {
+    font-size: 1.4rem;
+  }
+
+  .project-card__button {
+    font-size: 1.8rem;
+  }
+
+  .projects__more-link {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .projects__header {
+    font-size: 3rem;
+    margin-bottom: 3.2rem;
+  }
+
+  .projects__card {
+    width: 100%;
+    margin-right: 0 !important;
+  }
+
+  .projects__card:not(:nth-of-type(-n + 2)) {
+    display: none;
+  }
+
+  .projects__card:not(:last-of-type) {
+    margin-bottom: 1.6rem;
+  }
+
+  .project-card__title {
+    font-size: 1.9rem;
+    min-height: auto;
+  }
+
+  .project-card__description {
+    font-size: 1.2rem;
+  }
+
+  .project-card__button {
+    font-size: 1.6rem;
+  }
+
+  .projects__more-link {
+    font-size: 1.8rem;
+  }
 }
 
 
